# toppred

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  contributors.rst  index.rst  installation.rst  license.rst  usage.rst
docs/source/reference/: metrics.rst  predictions.rst  reference.rst
examples/: metrics.py  top_classification_report.py
tests/: test_metrics.py  test_predictions.py
toppred/: __init__.py  metrics.py  predictions.py  types.py  utils.py
