[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "toppred"
version = "0.0.2"
authors = [
  { name="Thijs van Ede", email="t.s.vanede@utwente.nl" },
]
description = "Extension to sklearn.metrics to allow metrics with multiple predictions. "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Thijsvanede/toppred"
"Bug Tracker" = "https://github.com/Thijsvanede/toppred/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}